--- a/package.json
+++ b/package.json
@@ -22,12 +22,23 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^20.0.0",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@taiga-ui/addon-charts": "^4.55.0",
+    "@taiga-ui/addon-doc": "^4.55.0",
+    "@taiga-ui/addon-table": "^4.55.0",
+    "@taiga-ui/cdk": "^4.55.0",
+    "@taiga-ui/core": "^4.55.0",
+    "@taiga-ui/event-plugins": "^4.0.2",
+    "@taiga-ui/icons": "^4.55.0",
+    "@taiga-ui/kit": "^4.55.0",
+    "@taiga-ui/layout": "^4.55.0",
+    "ngx-cookie-service": "^20.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -43,6 +54,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "less": "^4.4.1",
     "typescript": "~5.9.2"
   }
 }
