--- a/package.json
+++ b/package.json
@@ -1,60 +1,43 @@
 {
-  "name": "ftask",
+  "name": "alfaiz",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "prettier": {
-    "printWidth": 100,
-    "singleQuote": true,
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
-      }
-    ]
+    "test": "ng test",
+    "serve:ssr:Alfaiz": "node dist/alfaiz/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^20.0.0",
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/router": "^20.3.0",
-    "@taiga-ui/addon-charts": "^4.55.0",
-    "@taiga-ui/addon-doc": "^4.55.0",
-    "@taiga-ui/addon-table": "^4.55.0",
-    "@taiga-ui/cdk": "^4.55.0",
-    "@taiga-ui/core": "^4.55.0",
-    "@taiga-ui/event-plugins": "^4.0.2",
-    "@taiga-ui/icons": "^4.55.0",
-    "@taiga-ui/kit": "^4.55.0",
-    "@taiga-ui/layout": "^4.55.0",
-    "ngx-cookie-service": "^20.1.0",
+    "@angular/common": "^19.2.0",
+    "@angular/compiler": "^19.2.0",
+    "@angular/core": "^19.2.0",
+    "@angular/forms": "^19.2.0",
+    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-browser-dynamic": "^19.2.0",
+    "@angular/platform-server": "^19.2.0",
+    "@angular/router": "^19.2.0",
+    "@angular/ssr": "^19.2.17",
+    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.3",
-    "@angular/cli": "^20.3.3",
-    "@angular/compiler-cli": "^20.3.0",
+    "@angular-devkit/build-angular": "^19.2.17",
+    "@angular/cli": "^19.2.17",
+    "@angular/compiler-cli": "^19.2.0",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.9.0",
+    "@types/node": "^18.18.0",
+    "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "less": "^4.4.1",
-    "typescript": "~5.9.2"
+    "typescript": "~5.7.2"
   }
 }
