--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   - type: web
     name: ftask-frontend
     env: node
-    buildCommand: npm install && npm run build
+    buildCommand: npm install --prefer-offline --no-audit --no-fund && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
@@ -15,7 +15,7 @@ services:
     name: ftask-backend
     env: node
     rootDir: TaskShare
-    buildCommand: npm install
+    buildCommand: npm install --prefer-offline --no-audit --no-fund
     startCommand: npm start
     envVars:
       - key: NODE_ENV
